load('//:fdb.bzl', 'fdb_utility_library')

fdb_utility_library(
    name = "headers",
    hdrs = [
        "Locality.h",
        "QueueModel.h",
        "Smoother.h",
        "fdbrpc.h",
        "FlowTransport.h",
        "FailureMonitor.h",
        "genericactors.actor.h",
        "LoadBalance.actor.h",
        "JSONDoc.h",
        "ReplicationPolicy.h",
        "Platform.h",
        "MultiInterface.h",
        "IAsyncFile.h",
        "ReplicationTypes.h",
        "RangeMap.h",
        "AsyncFileBlobStore.actor.h",
        "ContinuousSample.h",
        "IRateControl.h",
        "LoadBalance.h",
        "TLSConnection.h",
        "ITLSPlugin.h",
        "Net2FileSystem.h",
        "BlobStore.h",
        "Replication.h",
        "simulator.h",
        "HTTP.h",
        "AsyncFileReadAhead.actor.h",
    ],
)

fdb_utility_library(
    name = "libfdbrpc",
    hdrs = [
        # In hdrs so that it can be included in other files.
        "generated-constants.cpp",
    ],
    srcs = [
        "ActorFuzz.h",
        "AsyncFileCached.actor.h",
        "AsyncFileEIO.actor.h",
        "AsyncFileKAIO.actor.h",
        "AsyncFileNonDurable.actor.h",
        "AsyncFileWinASIO.actor.h",
        "AsyncFileWriteChecker.h",
        "batcher.actor.h",
        "crc32c.h",
        "EndpointGroup.h",
        "linux_kaio.h",
        "LoadPlugin.h",
        "networksender.actor.h",
        "PerfMetric.h",
        "ReplicationUtils.h",
        "sha1/SHA1.h",
        "sim_validation.h",
        "TraceFileIO.h",
        "xml2json.hpp",

        "ActorFuzz.actor.cpp",
        "AsyncFileBlobStore.actor.cpp",
        "AsyncFileCached.actor.cpp",
        "AsyncFileNonDurable.actor.cpp",
        "AsyncFileWriteChecker.cpp",
        "BlobStore.actor.cpp",
        "crc32c.cpp",
        "dsltest.actor.cpp",
        "FailureMonitor.actor.cpp",
        "FlowTests.actor.cpp",
        "FlowTransport.actor.cpp",
        "genericactors.actor.cpp",
        "HTTP.actor.cpp",
        "IAsyncFile.actor.cpp",
        "Locality.cpp",
        "Net2FileSystem.cpp",
        "Platform.cpp",
        "QueueModel.cpp",
        "Replication.cpp",
        "ReplicationPolicy.cpp",
        "ReplicationTypes.cpp",
        "ReplicationUtils.cpp",
        "sha1/SHA1.cpp",
        "sim2.actor.cpp",
        "sim_validation.cpp",
        "TLSConnection.actor.cpp",
        "TraceFileIO.cpp",
    ],
    deps = [
        "//fdbclient:headers",
        "//fdbrpc:headers",
        "//fdbrpc/libb64:libb64",
        "//fdbrpc/libcoroutine:libcoroutine",
        "//fdbrpc/libeio:libeio",
        "//fdbrpc/md5:md5",
        "//fdbrpc/zlib:zlib",
        "//fdbrpc/rapidxml:rapidxml",
        "//fdbrpc/rapidjson:rapidjson",
    ],
)
